--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             // Your web app's Firebase configuration
             const firebaseConfig = {
-              apiKey: "AIzaSyA8XE9vef9xMJEgl7pcplEgc2OaM2xefW0",
+              //apiKey: "AIzaSyA8XE9vef9xMJEgl7pcplEgc2OaM2xefW0",
               authDomain: "attendance-30747.firebaseapp.com",
               databaseURL: "https://attendance-30747-default-rtdb.europe-west1.firebasedatabase.app",
               projectId: "attendance-30747",
@@ -207,4 +207,5 @@
 
 </body>
 </html>
+
 
