--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             
             // Your web app's Firebase configuration
             const firebaseConfig = {
+              apiKey: "AIzaSyA8XE9vef9xMJEgl7pcplEgc2OaM2xefW0",
               authDomain: "attendance-30747.firebaseapp.com",
               databaseURL: "https://attendance-30747-default-rtdb.europe-west1.firebasedatabase.app",
               projectId: "attendance-30747",
@@ -206,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
